--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,15 @@
        		<artifactId>javax.mail</artifactId>
        		<version>1.5.5</version>
     	</dependency>
+			<dependency>
+    			<groupId>com.google.code.gson</groupId>
+    			<artifactId>gson</artifactId>
+    			<version>2.8.9</version>
+    	</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-validation</artifactId>
+			</dependency>
 	</dependencies>
 
 	<build>
