--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,31 +18,33 @@ build-mvn-job:
     - mvn clean package -Dmaven.test.skip
 
 build-docker-job:
-  image: docker
+  image: docker:latest
   services:
-    - docker:dind
+    - docker:18.09.7-dind
   before_script:
-    - docker login -u $CI_DOCKER_USER -p $CI_DOCKER_PASSWORD
+    - docker login -u ${CI_DOCKER_USER} -p ${CI_DOCKER_PASSWORD}
 
   stage: build-docker
   script:
-    - docker build -t $URL_IMG_CONSUMER_DOCKER -f Dockerfile .
+    - docker build -t ${URL_IMG_CONSUMER_DOCKER} -f Dockerfile .
+    - docker push ${URL_IMG_CONSUMER_DOCKER}
 
-push-docker-job:
-  stage: build-docker
-  script:
-    - docker push $URL_IMG_CONSUMER_DOCKER
-
-deploy-k8s-job:
+config-k8s-job:
   stage: deploy-stage
   script:
     - echo "Deploying application..."
+    - echo "  KAFKA_HOST: ${kafka_host}" >> K8s/services/configmap.yml
+    # - echo "  KAFKA_TOPIC: $kafka_topic" >> K8s/services/configmap.yml
+    # - cat <<'EOF' >> K8s/services/configmap.yml
+    #   "  KAFKA_HOST: $kafka_host"
+
+deploy-k8s-job:
+  stage: deploy-stage
+  image: didox/ubuntu-ansible
+  script:
+    - echo "Deploying application..."
     - cat <<EOF > key.pem
-      $PRIVATE_KEY
+      ${PRIVATE_KEY}
       EOF
     - chmod 400 key.pem
-    # Entrar no aws
-    - ssh -i key.pem ubuntu@$CLUSTER-DEV
-    - kubectl create namespace $namespace-g3 # acho que não é legal ter isso aqui e sim rodar apenas uma vez na máquina
-    - kubectl apply -f .k8s/deployments/consumer-dp.yaml
-    # agora tem que rodar os arquivos do K8s
+    - ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i hosts prov.yml -u ubuntu --private-key key.pem
