--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-validation</artifactId>
 			</dependency>
+			<dependency>
+      	<groupId>org.mockito</groupId>
+      	<artifactId>mockito-core</artifactId>
+      	<version>4.5.1</version>
+      	<scope>compile</scope>
+    </dependency>
 	</dependencies>
 
 	<build>
