--- a/K8s/services/secret.yaml
+++ b/K8s/services/secret.yaml
@@ -1,10 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysecret
+  name: mysecret-g3
   namespace: namespace-g3
 type: Opaque
 data:
-  # valores encriptados com base64
-  JWT_SECRET:
-  DB_PASSWORD:
+  DB_PASSWORD: ${DB_PASSWORD}
