--- a/K8s/services/configmap.yaml
+++ b/K8s/services/configmap.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: remote-database-postgresql
+  name: g3-configmap-consumer
   namespace: namespace-g3
 data:
-  DB_USERNAME: $conteudo_db_username
-  DB_PASSWORD: $conteudo_db_password
-  DB_URL_AUTH: $conteudo_db_adm_url
-  DB_URL_USER: $conteudo_db_user_url
-  DB_URL_ORDER: $conteudo_db_order_url
+  DB_USERNAME: ${DB_USERNAME}
+  DB_URL_ORDER: ${DB_URL_ORDER}
+  KAFKA_HOST: ${KAFKA_HOST}
+  KAFKA_TOPIC: ${KAFKA_TOPIC}
+  EMAIL_SENDER: ${EMAIL_SENDER}
